<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="msg_token_fmt">FCM Token: %s</string>
    <string name="duty_tracker">Duty Tracker</string>
    <string name="welcome_to">Welcome to</string>
    <string name="paperless_platform">This paperless platform improves efficiency</string>
    <string name="reduces_errors">Reduces errors, and offers an intuitive interface for</string>
    <string name="manage_duty_logs">Students and teachers to manage duty logs</string>
    <string name="seamlessly">Seamlessly</string>
    <string name="form">Form</string>
    <string name="hk">HK Duty Tracker</string>
    <string name="signup">Sign Up</string>
    <string name="hello">Hello! Let\'s track your duty hours online with ease!</string>
    <string name="Sid">Student ID</string>
    <string name="pass">Password</string>
    <string name="conf">Confirm Password</string>
    <string name="chck">I agree with the privacy policy</string>
    <string name="bg"></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_agree_with_privacy_policy">I agree with the privacy policy</string>
    <string name="SignUpButton">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="select_year_placeholder">Select Year</string>

    <!-- DUTY TYPES -->
    <string-array name="duty_status_options">
        <item>Select Duty Status</item>
        <item>Office Duty</item>
        <item>Student Facilitator</item>
        <item>HK BBS</item>
    </string-array>

    <string-array name="scholar_type_options">
        <item>Select Scholar Type</item>
        <item>25%</item>
        <item>50%</item>
        <item>75%</item>
    </string-array>

    <string-array name="course_options">
        <item>Select Course</item>
        <item>CITE</item>
        <item>CMA</item>
        <item>CRIM</item>
    </string-array>

    <string-array name="year_level_options">
        <item>@string/select_year_placeholder</item>
        <item>First Year</item>
        <item>Second Year</item>
        <item>Third Year</item>
        <item>Fourth Year</item>
    </string-array>

    <!-- Navigation Fragments -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Duty Tracking -->
    <string name="hk_duty_status">HK Duty Status:</string>
    <string name="duty_hours_track">Duty Hours Track</string>
    <string name="date">Date</string>
    <string name="time_in">Time In</string>
    <string name="time_out">Time Out</string>
    <string name="remarks">Remarks</string>
    <string name="auth_sign">Auth. Sign</string>
    <string name="login">Login</string>
    <string name="logintext">Login</string>
    <string name="Title">HK Duty Tracker</string>
    <string name="logo">Logo</string>
    <string name="student_id_text">Student ID</string>
    <string name="enter_student_id">Enter Student ID</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_txt">Sign Up</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="approved_by">Approved By:</string>
    <string name="verfied_by">Verified By:</string>
    <string name="schedule">Schedule:</string>
    <string name="subject">Subject:</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">Enter Email</string>
    <string name="update_password">Update Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="newpass">Set a new password</string>
    <string name="reset_password">Reset Password</string>
    <string name="congratulations_your_password_has_been_changed_click_continue_to_login">
        Congratulations! Your password has been changed. Click continue to login.
    </string>
    <string name="duty_logs">Duty Logs</string>
    <string name="view_past_logs">View Past Logs</string>
    <string name="add_duty_logs">Add Duty Logs</string>
    <string name="filter_by_date">Filter by Date</string>
    <string name="duty_past_logs">Duty Past Logs</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="continuebtn">Continue</string>
    <string name="please_enter_your_email_to_reset_the_password">please_enter_your_email_to_reset_the_password</string>
    <string name="app_name" />
    <string name="schedules">schedules</string>
    <string name="enter_date">Enter Date</string>
    <string name="y_m_d">Y/M/D</string>
    <string name="timee">Time\n</string>
    <string name="enter_time_out">Enter Time Out</string>
    <string name="username">Username</string>
    <string name="profile1">Scholarship:\nExpert Teacher:\nSchedule:\nDuty STATUS:</string>
    <string name="profile2">Total Hours to be Rendered:\nTotal Hours Rendered:\nType Scholarship:\nHK SF:</string>
    <string name="forgot1">Forgot Password</string>
    <string name="create_a_new_password_ensure_it_differs_from_previous_ones_for_security">Create a new password. Ensure it differs from previous ones for security.</string>
    <string name="_123456789">123456789</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="successful">Successful</string>
    <string name="total_hours_to_be_rendered_n_total_hours_rendered_n_type_of_scholarship">Total Hours to be rendered\n Total hours rendered: \n Type of ScholarShip</string>
    <string name="new_password">New Password</string>
    <string name="view_logs">View Logs</string>
</resources>
