<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="371dp"
                android:layout_height="709dp">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="405dp"
                    android:layout_height="232dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/logo"
                    android:scaleType="fitCenter"
                    android:src="@drawable/p_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/usernametxt"
                    android:layout_width="98dp"
                    android:layout_height="29dp"
                    android:text="@string/student_id_text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.48" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="36dp"
                    android:background="@drawable/round"
                    android:hint="@string/enter_student_id"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/passwordtxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/username"
                    tools:ignore="MissingConstraints" />


                <!-- Fragment Container -->

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="72dp"
                    android:autofillHints=""
                    android:background="@drawable/round"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/signInbtn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/signInbtn"
                    android:layout_width="288dp"
                    android:layout_height="54dp"
                    android:backgroundTint="@color/green"
                    android:padding="10dp"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.845" />

                <TextView
                    android:id="@+id/signup_prompt"
                    android:layout_width="196dp"
                    android:layout_height="34dp"
                    android:layout_marginBottom="40dp"
                    android:text="@string/don_t_have_an_account"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.245"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signInbtn" />

                <TextView
                    android:id="@+id/signUpbtn"
                    android:layout_width="120dp"
                    android:layout_height="56dp"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/sign_up_txt"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.784"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signInbtn" />

                <TextView
                    android:id="@+id/btnforgot"
                    android:layout_width="317dp"
                    android:layout_height="51dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/forgot_password"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.764" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
