<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogsActivity"
    android:background="@color/white">

    <!-- Add RecyclerView here -->

    <TextView
        android:id="@+id/txtduty"
        android:layout_width="285dp"
        android:layout_height="88dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="Let's Track your Duty"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/totalhours"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalhours"
        android:layout_width="236dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="17dp"
        android:gravity="center"
        android:text="Total Hours Rendered: 0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sublog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtduty" />

    <LinearLayout
        android:id="@+id/sublog"
        android:layout_width="393dp"
        android:layout_height="355dp"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/container"
        android:elevation="10dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/pstLogs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="100dp"
            android:layout_height="16sp"
            android:text="@string/date" />

        <TextView
            android:id="@+id/dateInput"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:focusable="false"
            android:hint="Select Date"
            android:padding="12dp"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_in"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/timeIn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:focusable="false"
            android:hint="Select Time In"
            android:padding="12dp"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_out"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/timeOut"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:focusable="false"
            android:hint="Select Time Out"
            android:padding="12dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/LogsSubmit"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/green"
            android:padding="15dp"
            android:text="@string/submit" />

    </LinearLayout>

    <Button
        android:id="@+id/pstLogs"
        android:layout_width="338dp"
        android:layout_height="44dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/green"
        android:text="@string/view_logs"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>